Updated axis options and eliminated some warnings.
- Added options to AxisOptions and AbstractAxisOptions that were added
  in version after 0.8.3.

- Changed a few classes to use com.google.gwt.user.client.Element to
  com.google.gwt.user.client.Element which is deprecated.

- Used Double.valueOf and Boolean.valueOf. The constructors that take
  the unboxed type are deprecated.